--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,7 +3,7 @@
 
 .body {
   height: 100%;
-  padding: 50px;
+  padding: 20px 50px 20px 50px;
   background-color: $white;
   line-height: 1.6;
   font-family: $font-family;
@@ -34,13 +34,15 @@
 }
 
 .table {
+  display: flex;
+  justify-content: center;
   text-align: center;
   background-color: $illuminating-emerald;
   height: 600px;
+  width: 80%;
   overflow-y: scroll;
   &__section {
     width: 100%;
-    height: 100vh;
     &--thead {
       background-color: $davys-grey;
       color: $white;
@@ -79,7 +81,6 @@
   }
   &__form {
     text-align: center;
-    margin: 20px 0 20px 0;
     &--label {
       margin: 10px;
     }
