--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -51,6 +51,7 @@
       text-align: center;
       &--td {
         padding: 15px;
+        border-bottom: 1px solid $davys-grey;
       }
     }
   }
@@ -61,6 +62,7 @@
 
 .td__list {
   list-style: none;
+  padding: 5px;
   &--link {
     text-decoration: none;
     color: $black;
